# sponsor_tracker

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
app/: CMakeLists.txt  config_loader.cpp  config_loader.h  frame_utils.cpp  frame_utils.h  main.cpp  preview_ui.cpp  preview_ui.h  tracking_params_stub.cpp
assets/sponsor_refs/: bank_manifest.json  last_placement.json  reference_boundary.txt  reference_boundary_20260608_162543_188_20260608_162639_243_graphic_placement.txt  reference_boundary_20260608_163927_510_20260608_164039_729_grid_alignment.txt  reference_boundary_20260608_163927_510_20260608_164039_751_graphic_placement.txt  reference_boundary_20260608_164451_190_20260608_164512_225_grid_alignment.txt  reference_boundary_20260608_164451_190_20260608_164512_246_graphic_placement.txt  reference_boundary_20260608_170756_569_20260608_171202_147_grid_alignment.txt  reference_boundary_20260609_113906_434_20260609_113946_057_grid_alignment.txt  reference_boundary_20260609_113906_434_20260609_113946_078_graphic_placement.txt  reference_boundary_20260609_113906_434_20260609_114012_795_grid_alignment.txt  reference_boundary_20260609_114550_287_20260609_114708_175_grid_alignment.txt  reference_boundary_20260609_114550_287_20260609_114723_215_grid_alignment.txt  reference_boundary_20260609_120005_326_20260609_120005_890_graphic_placement.txt  reference_boundary_20260609_120005_326_20260609_120043_836_grid_alignment.txt  reference_boundary_20260609_125521_365_20260609_125549_804_grid_alignment.txt  reference_boundary_20260609_125521_365_20260609_125549_825_graphic_placement.txt  reference_boundary_20260609_130358_172_20260609_130443_026_grid_alignment.txt  reference_boundary_20260609_130358_172_20260609_130443_041_graphic_placement.txt  reference_boundary_20260609_130358_172_20260609_130509_758_graphic_placement.txt  reference_boundary_20260609_130614_710_20260609_130755_635_grid_alignment.txt  reference_boundary_20260609_130614_710_20260609_130755_657_graphic_placement.txt  reference_boundary_20260609_131039_919_20260609_131049_906_graphic_placement.txt  reference_boundary_20260609_131039_919_20260609_131059_345_graphic_placement.txt  reference_boundary_20260609_131109_357_20260609_131117_217_grid_alignment.txt  reference_boundary_20260609_131109_357_20260609_131125_192_grid_alignment.txt  reference_boundary_20260609_131109_357_20260609_131125_214_graphic_placement.txt  reference_boundary_20260609_134343_170_20260609_134403_270_grid_alignment.txt  reference_boundary_20260609_134343_170_20260609_134403_293_graphic_placement.txt  reference_boundary_20260609_134343_170_20260609_134415_303_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151639_270_grid_alignment.txt  reference_boundary_20260610_151638_911_20260610_151718_490_grid_alignment.txt  reference_boundary_20260610_151638_911_20260610_151718_525_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151723_543_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151727_721_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151729_858_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151731_354_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151732_524_graphic_placement.txt  reference_boundary_20260610_151638_911_20260610_151733_645_graphic_placement.txt  (+57 more)
assets/sponsor_refs/cam_1/: last_placement.json  reference_boundary_20260602_074101_476_20260602_074243_476_grid_alignment.txt  reference_boundary_20260602_074101_476_20260602_074301_835_graphic_placement.txt  reference_boundary_20260602_074101_476_20260602_074616_696_graphic_placement.txt
assets/sponsor_refs/cam_2/: last_placement.json  reference_boundary.txt  reference_boundary_20260602_074101_476_20260602_074745_726_grid_alignment.txt  reference_boundary_20260602_074101_476_20260602_074748_185_graphic_placement.txt  reference_boundary_20260602_074101_476_20260602_074819_382_graphic_placement.txt  reference_boundary_20260602_074101_476_20260602_074820_950_graphic_placement.txt
assets/sponsor_refs/cam_3/: last_placement.json  reference_boundary.txt  reference_boundary_20260602_074101_476_20260602_075057_199_grid_alignment.txt
cmake/: StiQyPrebuilt.cmake
config/: config.yaml
scripts/: build.sh  preview.sh  run.sh
